--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <table>
                 <tr>
                     <td>PlayerX</td> 
-                    <td><input type="text" id="XWin"></td>
+                    <td><input type="text" id="XWin" width="100px"></td>
                 </tr>
                 <tr>
                     <td>PlayerO</td>
