--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             <button id="play-again">Play Again</button>
             <table>
                 <tr>
-                    <td>PlayerX</td> 
-                    <td><input type="text" id="XWin" width="10px"></td>
+                    <td>Player X</td> 
+                    <td><input type="text" id="XWin" ></td>
                 </tr>
                 <tr>
-                    <td>PlayerO</td>
+                    <td>Player O</td>
                     <td><input type="text" id="OWin"></td>
                 </tr>
                 <tr>
