--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
             <table>
                 <tr>
                     <td>Player X</td> 
-                    <td><input type="text" id="XWin" ></td>
+                    <td><input type="text" id="XWin" size="10" ></td>
                 </tr>
                 <tr>
                     <td>Player O</td>
-                    <td><input type="text" id="OWin"></td>
+                    <td><input type="text" id="OWin" size="10"></td>
                 </tr>
                 <tr>
                     <td>Tie Count</td>
-                    <td><input type="text" id="Tie"></td>
+                    <td><input type="text" id="Tie" size="10"></td>
                 </tr>
                 <tr>
                     <td>Total Count</td>
-                    <td><input type="text" id="Total"></td>
+                    <td><input type="text" id="Total" size="10"></td>
                 </tr>
             </table>
         </div>
