--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <td><input type="text" id="OWin" size="10"></td>
                 </tr>
                 <tr>
-                    <td>Tie Count</td>
+                    <td>Die Count</td>
                     <td><input type="text" id="Tie" size="10"></td>
                 </tr>
                 <tr>
